# ChangeLog for dev-ruby/rails
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rails/ChangeLog,v 1.142 2009/08/16 14:31:02 armin76 Exp $

  16 Aug 2009; Raúl Porcel <armin76@gentoo.org> rails-2.3.3.ebuild:
  Add ~ia64 wrt #279123

  26 Jul 2009; Hans de Graaff <graaff@gentoo.org> rails-2.3.3.ebuild:
  Drop ia64 keyword #279123.

*rails-2.3.3 (22 Jul 2009)

  22 Jul 2009; Hans de Graaff <graaff@gentoo.org> +rails-2.3.3.ebuild:
  Version bump for Rails 2.3.3.

  28 May 2009; Raúl Porcel <armin76@gentoo.org> rails-2.3.2.ebuild:
  ia64 stable wrt #270331

  24 May 2009; Markus Meier <maekke@gentoo.org> rails-2.3.2.ebuild:
  x86 stable, bug #270331

  23 May 2009; Thomas Anderson <gentoofan23@gentoo.org> rails-2.3.2.ebuild:
  stable amd64, bug 270331

  23 May 2009; Brent Baude <ranger@gentoo.org> rails-2.3.2.ebuild:
  Marking rails-2.3.2 ppc64 stable for bug 270331

  23 May 2009; Brent Baude <ranger@gentoo.org> rails-2.3.2.ebuild:
  Marking rails-2.3.2 ppc stable for bug 270331

  18 May 2009; Ferris McCormick <fmccor@gentoo.org> rails-2.3.2.ebuild:
  Sparc stable, Bug #270331.

  18 May 2009; Hans de Graaff <graaff@gentoo.org> -rails-1.2.6.ebuild,
  -rails-2.0.5.ebuild, -rails-2.1.2.ebuild, -rails-2.2.2.ebuild:
  Remove old and vulnerable versions.

*rails-2.3.2 (17 Mar 2009)

  17 Mar 2009; Alex Legler <a3li@gentoo.org> +rails-2.3.2.ebuild:
  Version bump

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> rails-1.2.6-r1.ebuild,
  rails-2.1.2-r1.ebuild, rails-2.2.2-r1.ebuild:
  ia64 stable wrt #253425

  09 Jan 2009; Brent Baude <ranger@gentoo.org> rails-1.2.6-r1.ebuild,
  rails-2.0.5-r1.ebuild, rails-2.1.2-r1.ebuild, rails-2.2.2-r1.ebuild:
  rails-1.2.6-r1 rails-2.0.5-r1 rails-2.1.2-r1 rails-2.2.2-r1 ppc stable for
  bug 253425

  07 Jan 2009; Ferris McCormick <fmccor@gentoo.org> rails-2.2.2-r1.ebuild:
  Sparc stable, Bug #253425.
