@@ -3,10 +3,12 @@ DIST rails-2.1.2.gem 205312 RMD160 17c72d42748b8f7c77f630dafd2016e9387d806a SHA1
 DIST rails-2.2.2.gem 1224192 RMD160 3777845890f4be88d31081f97fce0e41c8a25c23 SHA1 f2c91f1a2397673e3c47d0c792268a2834b9bf66 SHA256 84fd0ee92f92088cff81d1a4bcb61306bd4b7440b8634d7ac3d1396571a2133f
 DIST rails-2.3.2.gem 209920 RMD160 fc6df1e55640fb99510dcddec78843bff044b049 SHA1 fb9ca2cbafd3e79ab29cbf4dfced25d7fe114646 SHA256 ac61e0356987df34dbbafb803b98f153a663d3878a31f1db7333b7cd987fd044
 DIST rails-2.3.3.gem 1257984 RMD160 aea2d692d2f21e3c689ad65d685a68dc29543b8e SHA1 87787a1a3fc49fdfc175eb4b18d21a653e3c6cbb SHA256 50b373c47c0a59a16790f8630194e3cd732c28acfcb3ec89bc1ff83ec1f12979
+DIST rails-2.3.4.gem 1258496 RMD160 e2b808f2d01ab5b9a9d8a90ca4871f69332e85dd SHA1 cd7d3e0407fd70db70c1a751fe7796e2f231f017 SHA256 94ffc90b6d0456feaf8610b1d0007c4d2836c0e1c88b33f89d7b8c0043c2f15c
 EBUILD rails-1.2.6-r1.ebuild 1430 RMD160 6d350161c2a49149fde23665e7e1db91760c2d23 SHA1 9603f8ba6139c80cae35e7b8a50da7d5e4d82e53 SHA256 f2f464b2a6a0742079f1d17447d4b376b032a6d0782da4be086fed042d1564db
 EBUILD rails-2.1.2-r1.ebuild 1234 RMD160 7e3f841af4d05acfc9f6db56e684032ddbd528cf SHA1 e81ba89bdd327989f87196a1be6aa2e1756986fe SHA256 969a67ac6a6a403685b6593f19cdee3eec5fc8420150ef08f0352433d33a089e
 EBUILD rails-2.2.2-r1.ebuild 1234 RMD160 f1b9fcf817ec7179717431e99ff444471ab860a6 SHA1 3d5935fc9bd4187a3505814505aa1cfe8c44e121 SHA256 c63f9b7b42e4f8a5240d6add3754f3883490697e4d2faa9a7ce7670f1ba1ae21
 EBUILD rails-2.3.2.ebuild 1269 RMD160 b66e67861b644cbcb943a00c6bcea84b2d28f876 SHA1 c3db442803222c88af4aaac755ada1264c503906 SHA256 9bf623fe1f517b1e67af019b83d5574730d633454bb13d33c78ffef36a61587e
 EBUILD rails-2.3.3.ebuild 1269 RMD160 bd5e89cdccfba324247f516ad219add9ed0d3543 SHA1 9f790b93e1ee0c52841cbbebc4ed9416d015442f SHA256 6cfc2064ab64c851fa5368f3ae3b9b745770f32b2a98dee53680c1f5e1ec9f44
-MISC ChangeLog 19102 RMD160 3c0b257125ab07a2b5b8bab36fb515cd60bc589e SHA1 c73695597e3b474312a3afb4450a3ce6fa91f2c7 SHA256 65d56e36defee13ada8e79e3c542b14aa8f7bddef6cd3684d258da56d04ffb25
+EBUILD rails-2.3.4.ebuild 1268 RMD160 38a894e349e01bfccbca01df24144af8a8c37246 SHA1 3f9e507d4248975b89ddc488e20b858706618da6 SHA256 a596dcc7462e331f5b1abafd61e8cb2cf31906d790e19faa93bc036ae09388d5
+MISC ChangeLog 19258 RMD160 5a593279fcbf77bbd5a3881640654af39eb8024a SHA1 e2e7a53baf4ea24875bf1dc2acb2ab05fc9034a1 SHA256 879d0b1c8c66705066ccfad4ee63daeb6c329c498214d8a93c949f6aec51306b
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
